--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/beestro.png">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beestro</title>
